<resources>
    <string name="app_name">Inwardwalking</string>
    <!--登录页面-->
    <string name="login_user">请输入您的手机号</string>
    <string name="login_password">请输入您的密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_forget_the_password">忘记密码？</string>
    <!--注册界面-->
    <string name="insert_name">请输入您的姓名</string>
    <string name="insert_phone">请输入您的手机号</string>
    <string name="insert_yzm">请输入验证码</string>
    <string name="insert_pwd">请输入6-20位数字或字母密码</string>
    <string name="insert_yqm">请输入邀请码（非必填）</string>
    <string name="xieyi">我已阅读，并同意《用户注册协议》</string>
    <string name="ljcz">立即注册</string>
    <string name="getyzm">获取验证码</string>
    <string name="insert_newpwd">请输入新密码</string>
    <string name="submit">提交</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">首页</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
</resources>
